@@ -128,6 +128,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   (copyGroups, powerObservers, advices, ...). This way we added a ItemLocalRolesUpdatedEvent to which
   a plugin may subscribe to adapt localRoles if needed. Do not call MeetingItem._updateAdvices directly,
   it is now a submethod of MeetingItem.updateLocalRoles
+- Added Collection to 'search living items', returning every items supposed to be 'living', so items for which
+  the workflow is not finished.  By default, it displays items that are not in the MeetingConfig.itemDecidedStates
 
 3.3 (2015-02-27)
 ----------------
